# rust_kafka_example

./: .gitignore  LICENSE  README.md
docker/: docker_producer.Dockerfile
kafka_cons_prod/: Cargo.toml  build.rs  producer.config
kafka_cons_prod/src/: identity.proto  postgres_utils.rs  producer.rs  utils.rs
