[package]
name = "kafka_cons_prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap    = "2.33.0"

    [dependencies.rdkafka]
    version     = "~0.29"
    features    = ["ssl", "sasl"]

[[bin]]
name = "producer"
path = "src/producer.rs"