[package]
name = "kafka_cons_prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"

tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = "0.7.8"
postgres = "0.19.5"
serde = "0.9"

bytes = "0.4"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"

serde_json = "0.9"
serde_derive = "0.9"
clap    = "2.33.0"

    [dependencies.rdkafka]
    version     = "~0.29"
    features    = ["ssl", "sasl"]

[build-dependencies]
prost-build = "0.5"

[[bin]]
name = "producer"
path = "src/producer.rs"